# jpeg

./: CMakeLists.txt
src/: main.cpp
